hack/test.yaml
==> Linting ../charts/inference-gateway
[INFO] Chart.yaml: icon is recommended

1 chart(s) linted, 0 chart(s) failed
---
# Source: inference-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-inference-gateway
  labels:
    helm.sh/chart: inference-gateway-0.1.0
    app.kubernetes.io/name: inference-gateway
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.4.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: inference-gateway
    app.kubernetes.io/instance: release-name
---
# Source: inference-gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-inference-gateway
  labels:
    helm.sh/chart: inference-gateway-0.1.0
    app.kubernetes.io/name: inference-gateway
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.4.1"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: inference-gateway
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        helm.sh/chart: inference-gateway-0.1.0
        app.kubernetes.io/name: inference-gateway
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "0.4.1"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: release-name-inference-gateway
      containers:
        - name: inference-gateway
          image: "ghcr.io/inference-gateway/inference-gateway:v0.4.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
